# zk-tools

./: .gitignore  package.json
api/: Cargo.toml  Readme.md  Shuttle.toml
api/src/: apis.rs  data.rs  lib.rs  main.rs  sui.rs  utils.rs
api/src/static/: circuit.wasm  circuit.zkey  setup.sh
contracts/zkrp/: Move.toml
contracts/zkrp/sources/: happyrp.move  zkrp.move
contracts/zkrp/tests/: zkrp_tests.move
www/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
www/api/: suiData.js  useTransactionExecution.js
www/app/: Home.js  MyBtn.css  globals.css  layout.js  page.js
www/app/receive/: page.js
www/app/receive/[id]/: page.js
www/app/send/: page.js
www/components/: Navbar.js  Provider.js  drawBody.js  networkConfig.js  rpList.js
www/lib/: useUserBalance.jsx
www/utils/: util.js
